--- a/scss/_main-photo.scss
+++ b/scss/_main-photo.scss
@@ -65,7 +65,7 @@
 		width: 60rem;
 }
 	@media only screen and (min-width: $break-xl) {
-		width: 75rem;
+		width: 78rem;
 		max-width: 100%;
 }
 }
